<resources>
    <string name="app_name">Sannad</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_invalid_username">Username too large </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="log_out">Log Out</string>
    <string name="Sannad">Sannad</string>
    <string name="Welcome">Please login or sign up</string>
    <string name="ForgotPassword">Forgot your password?</string>

    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget your  Password?</string>

    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phoneNumber">Enter Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="choose_Picture">Choose a Picture</string>
    <string name="title">Title</string>
    <string name="typeDescription">Type a Description</string>
    <string name="discard_and_back">Discard and Back</string>
    <string name="post">Post</string>
    <string name="account_setting">Account Setting</string>
    <string name="go_to_home_page">Go To Home Page</string>
    <string name="go_to_chat">Go To Chat</string>
    <string name="exit">Exit</string>
    <string name="choose_pictures">Choose Pictures</string>
    <string name="S">S</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="phone_number">Phone Number</string>
    <string name="code">Code</string>
    <string name="verification">Verification</string>
    <string name="otp_description">Enter the code which you have received</string>
    <string name="verify_code">Verify Code</string>
    <string name="forgetpasswordDetails">To reset your password, Enter your Phone Number</string>
    <string name="email_or_phone_number">Email or Phone !</string>
    <string name="resetPasswordDetails">Please select which contact detail should we use to reset you password</string>
    <string name="new_password">New Password</string>
    <string name="set_your_new_password">Set your New Password</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_Connection">"No internet connection available. please check your network"</string>
    <string name="account_settings">Account Settings</string>
    <string name="address">address</string>
    <string name="close">close</string>
    <string name="password_updated">Password updated</string>
    <string name="your_password_has_been_successfully_updated">Your Password has been successfully updated</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="select_your_age">Select your Age</string>

    <string name="text">text</string>
    <string name="show_more">show more</string>
    <string name="show_less">show less</string>
    <string name="edit_request">edit request</string>
    <string name="username">username</string>
    <string name="date">date</string>
    <string name="old_password">old password</string>
    <string name="repeat_password">repeat password</string>
    <string name="change_password">change password</string>
    <string name="filter_requests_by_destination">filter requests by destination</string>
    <string name="change_username">change username</string>
    <string name="change_your_location">change your location</string>
    <string name="Phone_number_does_not_exist">This Phone number does not exist</string>
    <string name="Enter_Valid_Phone_Number">Please Enter Valid Phone Number</string>
    <string name="wrong_password">\"Wrong password. Try again or click Forgot password to reset it \"</string>
    <string name="gps_request_message">Your GPS seems to be disabled, do you want to enable it to allow access on your location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps_enabled">Your GPS is already enabled</string>
    <string name="permission_granted">Permission already granted</string>
    <string name="gps_note">Note: It is important to allow location permission and after that to enable your GPS so that requests of users can be filtered, depending on the locations of users.\n \nDo you want to allow it?</string>
    <string name="gpsRequestPermission">Please grant the location permission!!\n \n</string>
    <string name="select_Gender">Please Select the  Gender</string>
    <string name="agehasTobe">Age has to be at least 13</string>
    <string name="password_is_not_valid">Password is not Valid</string>
    <string name="Verification_Successfully_Completed">Verification is Successfully Completed</string>
    <string name="verification_Not_Completed">Verification Not Completed! Try again.</string>
    <string name="your_address_was_not_located">Your address was not located, your GPS is still determining your current location, you can update it again from your accountsetting.</string>
    <string name="your_GPS_disabled">Your address is not located, your GPS was disabled.</string>
    <string name="filer_requests">filer requests</string>


</resources>
