<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/addPhoto"
        android:icon="@drawable/ic_add_photo"
        android:title="@string/action_send"

        app:showAsAction="ifRoom|never" />

    <item
        android:id="@+id/sendReqest"
        android:icon="@drawable/ic_send"
        android:title="@string/action_send"

        app:showAsAction="ifRoom|never" />




    <item
        android:id="@+id/mainChangeViewButten"
        android:title="change view" />
    <item
        android:id="@+id/mainLogoutButten"
        android:title="@string/log_out" />
    <item
        android:id="@+id/mainAccountSettingButton"
        android:title="@string/account_setting" />

</menu>