<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginAndRegister.SetNewPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"

        >



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/update_new_password_icon"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:fontFamily="@font/muli_black"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_your_new_password"
            android:fontFamily="@font/muli"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"



            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/enter_password"
            android:id="@+id/setNewPasswordActivity_newPassword"


            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/key"
            app:startIconTint="@color/green"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/green"



            >


            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:inputType="textPassword"


                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/confirm_password"
            android:id="@+id/setNewPasswordActivity_confirm_password"

            app:hintTextColor="@color/white"
            app:boxStrokeColor="@color/green"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/key"
            app:startIconTint="@color/green"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/green"



            >


            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli"
                android:inputType="textPassword"


                android:textColor="@color/white">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="UpdatePassword"
            android:id="@+id/setNewPasswordActivity_next_button"
            android:background="@color/green"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:transitionName="transition_next_btn"

            />




    </LinearLayout>


</ScrollView>